<resources>
    <string name="app_name">iDent Management</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="phone_no">Phone No.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">Create a  new account</string>
    <string name="create_account">Create Account</string>
    <string name="enter_phone_number">Mobile No.</string>
    <string name="password">Password</string>
    <string name="profile_description">Endodontist,ConservativeDentist,Cosmetic/Aesthetic Dentist MDS - Conservative Dentistry &amp; Endodontics,BDS</string>
    <string name="edit_prof"><u>Edit Profile</u></string>
    <string name="experience">Experience</string>
    <string name="clinic_address">Clinic Address</string>
    <string name="add_clinic">Add Clinic</string>
    <string name="campaign">Campaign</string>
    <string name="send_to">Send to:</string>
    <string name="regards_dr_sachin_kumar_9012345678">Regards \nDr.Sachin Kumar,9012345678</string>
    <string name="all_patients">All Patients</string>
    <string name="selected_patients">Selected Patients</string>
    <string name="selected_group">Selected Group</string>
    <string name="write_here_your_message">Write Here Your Message</string>
    <string name="select_signature">Select Signature:</string>
    <string name="select_service">Select Service:</string>
    <string name="service_description">Service Description</string>
    <string name="campaign_type">Campaign Type:</string>
    <string name="noida">Noida</string>
    <string name="noon">Noon</string>
    <string name="specialist">Specialist</string>
    <string name="ident_clinic">iDent Clinic</string>
    <string name="_9_years_of_experience">9 Years of Experience</string>
    <string name="Select_Slots">Select Slots</string>
    <string name="already_have_a_account_login">Already have a account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_or_mobile_no">Email</string>
    <string name="shared_pref">SHARED_PREF</string>
    <string name="not_sufficient_permissions">You do not have sufficient permissions for this action\ngoto Settings>Apps>Master Consultant>Permissions</string>
    <string name="give_permission">Give Permission</string>
    <string name="please_wait">Please wait…</string>
    <string name="allergy">Allergy </string>
    <string name="department">Department </string>
    <string name="select_department">Select Department </string>
    <string name="something_went_wrong">Something went wrong!!</string>
    <string name="please_enter_correct_password">Please Enter Correct Password</string>
    <string name="please_connect_with_internet">OOPS!! Please Connect with Internet</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_gallary">Choose from gallary</string>
    <string name="select_documents">Select documents</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call Patient</string>
    <string name="crown_prepara">Crown prepara</string>
    <string name="treatments_and_products">TREATMENTS AND PRODUCTS</string>
    <string name="are_you_cancal_appointment">Are you sure you want to cancel this appointment?</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="saving_image">Saving image</string>
    <string name="delete">Delete</string>
    <string name="are_you_del_pres">Are you sure you want to delete this prescription?</string>
    <string name="are_you_del_patient">Are you sure you want to delete this Patient?</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_logout">Are you sure you want to log out?</string>
    <string name="permission_required">Permission Required</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="total_patient">Total Patient</string>
    <string name="total_approved">Total Approved</string>
    <string name="total_cancelled">Total Cancelled</string>
    <string name="total_pending">Total Pending</string>
    <string name="calender">Calender</string>
    <string name="view_prescription">View Prescription</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="appointment_list">Appointment List</string>
    <string name="appointment">Appointment</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="select_medicine">Select Medicine</string>
    <string name="dosage_frequency">Dosage &amp; Frequency</string>
    <string name="customize">Customize</string>
    <string name="select_clinic">Select Clinic</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="patient_name">Patient Name</string>
    <string name="select_date">Select Date</string>
    <string name="billing_date">Billing Date</string>
    <string name="billing_history">Billing History</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="purpose_of_visit">Purpose of visit............</string>
    <string name="send_sms">Send SMS</string>
    <string name="sms">SMS</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="tobacco">Tobacco</string>
    <string name="mail">Mail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="add_patient">Add Patient</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="habits">Habits</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="blood_g">Blood G</string>
    <string name="illness">Illness</string>
    <string name="patient">Patient</string>
    <string name="submit">Submit</string>
    <string name="patient_information">Patient Information</string>
    <string name="patient_list">Patient List</string>
    <string name="patient_details">Patient Details</string>
    <string name="no_show">No Show</string>
    <string name="energy">Energy</string>
    <string name="book_appointment">BOOK APPOINTMENT</string>
    <string name="_15">15</string>
    <string name="search_medicine">Search Medicine</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="_1_tab">1 Tab</string>
    <string name="before_food">Before Food</string>
    <string name="after_food">After Food</string>
    <string name="after_meal">After Meal</string>
    <string name="_5_days">5 Days</string>
    <string name="instractions">Instractions.........</string>
    <string name="add_prescriptions">Add Prescription</string>
    <string name="add_item">Add Item</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="prescription">Prescription</string>
    <string name="prescription_detail">Prescription Detail</string>
    <string name="add_product">Add Product</string>
    <string name="product_service_name">Product/service Name</string>
    <string name="price">Price</string>
    <string name="tax_rate">Tax rate %</string>
    <string name="description">Description.....</string>
    <string name="description_without_ext">Description</string>
    <string name="patient_description">Description</string>
    <string name="other_details">Other Details</string>
    <string name="product_service">Medicine/service</string>
    <string name="inv_2541">INV-2541</string>
    <string name="service">Service</string>
    <string name="invoice">invoice</string>
    <string name="_07_11pm_07_26">07:11PM-07:26</string>
    <string name="invoice_4_00">Invoice:$4.00</string>
    <string name="inv786">INV786</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="_1_0_1">1-0-1</string>
    <string name="_4_days">4 Days</string>
    <string name="_1_more">1 More</string>
    <string name="invoice_continue">Continue</string>
    <string name="capsule_amoxicillin">capsule_amoxicillin</string>
    <string name="tablet_amoxicillin">Tablet Amoxicillin</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="_08_03_2023">08/03/2023</string>
    <string name="select_patient">Select Patient</string>
    <string name="add_product_service">Add Product/service</string>
    <string name="total_amount">Total Amount</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="signature">Signature</string>
    <string name="add_notes">Add Notes</string>
    <string name="extra_charges">Extra Charges</string>
    <string name="discount">Discount</string>
    <string name="add_billing">Add Billing</string>
    <string name="billing_summary">Billing Summary</string>
    <string name="done">Done</string>
    <string name="reason_to_come">Reason to come</string>
    <string name="search_patient">Search Patient</string>
    <string name="add_new">Add New</string>
    <string name="_1500_inr">100 INR</string>
    <string name="dental_implant">Dental implant</string>
    <string name="teeth_whitening">Teeth Whitening</string>
    <string name="teeth_no">Teeth No.</string>
    <string name="quantity">Quantity</string>
    <string name="_1_0">1.0</string>
    <string name="amount">Amount</string>
    <string name="_1_quantity">1</string>
    <string name="item_4">Item: 4</string>
    <string name="qty_4_0">Qty: 4.0</string>
    <string name="medicine">Medicine</string>
    <string name="dosage_pre">Dosage/pre</string>
    <string name="duration">Duration</string>
    <string name="_1_tab_m_after_meel">1 Tab M after meel</string>
    <string name="take_1_tab_during_pain_in_lower_teeth">Take 1 Tab during pain in lower teeth</string>
    <string name="enter_your_name">Your Name</string>
    <string name="enter_email">Email</string>
    <string name="todo">TODO</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="appointment_is_not_found">Appointment is Not Found</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="patient_age">Patient Age</string>
    <string name="dr_edom_crystonal">Dr.Edom Crystonal</string>
    <string name="Appointments" />
    <string name="Settings" />
    <string name="LogOut" />
    <string name="Help" />
    <string name="Reviews" />
    <string name="change_password">Change Password</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="my_reward">My Reward</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="what_s_news">What\'s News</string>
    <string name="belindavakar_gmail_com">belindavakar@gmail.com</string>
    <string name="about_us">About Us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="marvin_mckinney">Marvin McKinney</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="edit_details">Edit Details</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="valid_enter_email">Please enter email address</string>
    <string name="valid_enter_name">Please enter Enter Your Name</string>
    <string name="valid_email">Please enter valid email address</string>
    <string name="share">Share</string>
    <string name="male">Male</string>
</resources>