<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.CampaignActivity"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/toolBar"
            layout="@layout/app_toolbar" />
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campaign_type"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_40sdp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms"

                android:fontFamily="@font/poppins_regular"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="@dimen/_8sdp"

                />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/all_patients"
                android:fontFamily="@font/poppins_regular"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/selected_patients"
                android:fontFamily="@font/poppins_regular"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/selected_group"
                android:fontFamily="@font/poppins_regular"
                />
        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/mCardViewPV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@color/white"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/editTextView"
                    android:layout_height="@dimen/_150sdp"
                    android:hint="@string/write_here_your_message"
                    android:inputType="textCapSentences"
                    android:maxLength="150"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:paddingTop="@dimen/_8sdp"
                    />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_signature"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_40sdp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regards_dr_sachin_kumar_9012345678"
                android:fontFamily="@font/poppins_regular"

                />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvAddPatientbtn"
            style="@style/button"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:text="@string/submit" />
         </LinearLayout>
</androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>