<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".patient.PatientInformationFragment">

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/patient_name"
                        android:textSize="@dimen/sp_14"
                        />

                    <TextView
                        android:id="@+id/tvPatientNI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/sp_12"
                        />

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textSize="@dimen/sp_14"
                        />

                    <TextView
                        android:id="@+id/tvPatientPNumI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:text="0000000000"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/colorGray" />

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="@dimen/sp_14"
                        />

                    <TextView
                        android:id="@+id/tvPatientEmailI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:text="ident@gmail.com"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/sp_12"

                        />

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />

                    <TextView
                        android:id="@+id/tvPatientAddressI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/colorGray" />

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/tvPatientGenderI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/colorGray" />

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/patient_age" />

                    <TextView
                        android:id="@+id/tvPatientAgeI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="00"
                        android:textColor="@color/colorGray" />

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reason_to_come" />

                    <TextView
                        android:id="@+id/tvPatientReasonI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Reason"
                        android:textColor="@color/colorGray" />

                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allergy" />

                    <TextView
                        android:id="@+id/tvPatientAllergyI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allergy"
                        android:textColor="@color/colorGray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/txtMonMed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/smoking" />

                            <TextView
                                android:id="@+id/tvPatientSI"

                                style="@style/txtMonReg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"
                                android:textColor="@color/colorGray"
                                />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">


                            <TextView
                                style="@style/txtMonMed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/drinking" />


                            <TextView
                                android:id="@+id/tvPatientDI"

                                style="@style/txtMonReg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"
                                android:textColor="@color/colorGray"
                                />



                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/txtMonMed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tobacco" />

                            <TextView
                                android:id="@+id/tvPatientTI"

                                style="@style/txtMonReg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"
                                android:textColor="@color/colorGray"
                                />

                        </LinearLayout>

                    </LinearLayout>


                    <TextView
                        style="@style/txtMonMed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department"
                        />

                    <TextView
                        android:id="@+id/tvPatietDepartmentI"

                        style="@style/txtMonReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/department"
                        android:layout_marginBottom="@dimen/_16sdp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>